# google-docs-listener

./: .env.sample  .gitignore  .pylintrc  README.md  config.py  contribution_evaluation.py  docker-compose.yml  example_body.json  get_refresh_token.py  listener.py  main.py  nlp.py  pyproject.toml
utils/: __init__.py  compare_revisions.py  get_color_from_env.py  get_only_added_lines.py  get_only_added_parts.py  print_debug.py
